New maintainer. (Closes: #547045)
* New maintainer. (Closes: #547045)
* New upstream release.
* Menu entry has been added in "Applications->Accessories". (Closes: #474969)
* debian/rules:
  - Simplified the rules file using dh7 features.
* debian/control:
  - Updated project homepage.
  - Updated debhelper dependency to (>= 7.0.50~).
  - Added dependency on quilt (>= 0.46-7).
* debian/copyright:
  - Linked to GPL-2.
* debian/compat:
  - Updated debhelper compatibility to 7.
* debian/patches/:
  - Added 10-gen-sh.diff: to remove the timestamps modification of the
    po/gip.pot file.
  - Added 20-build-sh.diff: to correct installation path in the build.sh
    file, and remove uselessly linked libraries.
  - Added 30-gip-desktop.diff: to correct the path in the .desktop file,
    and remove the "Encoding" key.
* Added a debian/watch file.
* Added a debian/gip.dirs file.
* Standards-Version bumped to 3.8.3.

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: gip
 Section: gnome
 Priority: optional
-Maintainer: Khalid El Fathi <invent@edena-fr.org>
-Build-Depends: debhelper (>= 5), intltool, libgtkmm-2.4-dev
-Standards-Version: 3.7.3
-Homepage: http://www.debain.org/software/gip/
+Maintainer: Ignace Mouzannar <mouzannar@gmail.com>
+Build-Depends: debhelper (>= 7.0.50~), quilt (>= 0.46-7), intltool, libgtkmm-2.4-dev
+Standards-Version: 3.8.3
+Homepage: http://code.google.com/p/gip/
 
 Package: gip
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: IP calculator for GNOME desktop environment
  Gip provides system administrators with tools for IP address based
  calculations. For example, an administrator who needs to find out which IP
