--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: gip
 Section: gnome
 Priority: optional
 Maintainer: Ignace Mouzannar <mouzannar@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~), quilt (>= 0.46-7), intltool, libgtkmm-2.4-dev
-Standards-Version: 3.9.1
+Build-Depends: debhelper (>= 7.0.50~), intltool, libgtkmm-2.4-dev
+Standards-Version: 3.9.2
+DM-Upload-Allowed: yes
 Vcs-Svn: svn://svn.debian.org/collab-maint/ext-maint/gip/trunk/
 Vcs-Browser: http://svn.debian.org/viewsvn/collab-maint/ext-maint/gip/trunk/
 Homepage: http://code.google.com/p/gip/
